vertical alignment fixed

--- a/coffee.css
+++ b/coffee.css
@@ -52,6 +52,7 @@ there are definitely some properties you should add!*/
       width: 200px;
       margin-left: 170px;
       display:inline-block;
+      vertical-align: middle;
 
     }
 
@@ -67,6 +68,7 @@ there are definitely some properties you should add!*/
       max-width: 420px;
       text-align: justify;
       display: inline-block;
+      vertical-align: middle;
     }
     h2 {
       background-color: #eee9e3;
